# Fraudshield

./: .dockerignore  Dockerfile  HF_BLOG_DRAFT.md  HF_DEPLOYMENT_GUIDE.md  README.md  SUBMISSION_CHECKLIST.md  agentic_demo.py  check_deployment.py  config.py  data_loader.py  download_kaggle_data.py  environment.py  evaluate.py  fraudshield_env.py  fraudshield_kaggle_results.json  graders.py  inference.py  inference_llm.py  llm_agent.py  llm_agent_openai.py  models.py  openenv.yaml  pyproject.toml  reward.py  train.py  utils.py  validate_api.py  validate_enhancements.py
artifacts/: data_provenance.json  training_summary.json
configs/: colab_qlora_grpo.json
data/: fraudshield_cases.json
notebooks/: fraudshield_trl_colab.ipynb
server/: app.py
