[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudshield"
version = "0.1.0"
description = "E-commerce fraud detection OpenEnv environment for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Devika", email = "devikaj2005@gmail.com"}
]

dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.25.0",
    "kaggle>=1.5.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "ipython>=8.0.0",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/DevikaJ2005/fraudshield"
"Documentation" = "https://github.com/DevikaJ2005/fraudshield/blob/main/README.md"
"Repository" = "https://github.com/DevikaJ2005/fraudshield.git"

[tool.setuptools]
packages = ["fraudshield"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]
