[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudshield"
version = "0.2.0"
description = "OpenEnv fraud review environment built from a frozen public-data snapshot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Devika J", email = "devikaj2005@gmail.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.24.0",
    "openai>=1.40.0",
    "openenv-core>=0.2.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
data = [
    "kaggle>=1.6.0",
]
dev = [
    "black>=24.0.0",
    "ipython>=8.0.0",
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/DevikaJ2005/fraudshield"
Repository = "https://github.com/DevikaJ2005/fraudshield.git"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = [
    "data_loader",
    "download_kaggle_data",
    "fraudshield_env",
    "graders",
    "inference",
    "inference_llm",
    "llm_agent",
    "models",
]

[tool.setuptools.packages.find]
include = ["server"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
